--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "url": "https://github.com/mean-expert-official/loopback-sdk-builder/issues"
   },
   "dependencies": {
+    "camelcase": "^7.0.0",
     "chalk": "1.1.3",
     "ejs": "1.0",
     "extfs": "0.0.7",
